--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-hover-card": "^1.0.7",
@@ -35,6 +36,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
+    "limiter": "^2.1.0",
     "lucide-react": "^0.368.0",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
@@ -43,6 +46,7 @@
     "react-easy-sort": "^1.6.0",
     "react-hook-form": "^7.51.3",
     "react-redux": "^9.1.1",
+    "sfmc-sdk": "^2.0.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
